Update to work with sbt 0.13.16 and sbt 1.0.x